--- a/templates/typingPage.html
+++ b/templates/typingPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -9,26 +9,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>TYPE RACER</title>
-    <script src = "./display.js"></script>
   </head>
   <body>
-    <div class = "container mt-5">
-    <div class = "d-flex flex-column">
-      <h1>TypeRacer</h1>
-      <p id = "correct_text">OOH WHOA OOH whoa, ooh whoa
-                        You know you love me, I know you care
-                        Just shout whenever and I'll be there
-                        You are my love, you are my heart
-                        And we will never, ever, ever be apart</p>
-      <p id='main_text'></p>
-      <div>
-          type here
-      </div>
-      <div class="input-group-prepend col-md-8">
-        <input type="text" id="in" class="form-control" placeholder="TYPE BITCHES"/>
-      </div>
+    <div class = "container mt-5 col-10">
+
+    <div class = "jumbotron jumbotron-fluid row d-flex justify-content-center flex-column">
+
+      <form method = "POST"> <!-- needs an action -->
+         <p>TYPE A WORD <input type = "text" name = "user_word" /></p>
+         <p><input type = "submit" value = "submit" /></p>
+      </form>
+
+
     </div>
   </div>
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
