--- a/templates/typingPage.html
+++ b/templates/typingPage.html
@@ -9,25 +9,32 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel ="stylesheet" href = "../css/my_style.css">
     <title>TYPE RACER</title>
-    <script src = "../display.js"></script>
   </head>
   <body>
     <div class = "container mt-5">
     <div class = "d-flex flex-column">
+      <div class = "row">
       <h1>TypeRacer</h1>
       <p id = "correct_text">OOH WHOA OOH whoa, ooh whoa You know you love me, I know you care Just shout whenever and I'll be there You are my love, you are my heart And we will never, ever, ever be apart</p>
-      <p id='input_text'></p>
+      <!-- <p id='input_text'></p> -->
       <div>
           type here
       </div>
-      <div class="input-group-prepend col-md-8">
+      <div class="input-group-prepend col-md">
         <input type="text" id="in" class="form-control" placeholder="you better type fast!"/>
       </div>
+      <div class = "col-md">
+        <div id="app">
+        </div>
+      </div>
+    </div>
     </div>
   </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src = "../display.js"></script>
+
     <script src="../dist/mark.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
