--- a/templates/typingPage.html
+++ b/templates/typingPage.html
@@ -12,18 +12,18 @@
   </head>
   <body>
     <div class = "container mt-5">
-    <div class = "d-flex flex-column">
+    <div class = "row d-flex flex-column">
       <div class = "row">
       <h1>TypeRacer</h1>
-      <p id = "correct_text">OOH WHOA OOH whoa, ooh whoa You know you love me, I know you care Just shout whenever and I'll be there You are my love, you are my heart And we will never, ever, ever be apart</p>
+
+      <p id = "correct_text" class = "alert alert-info">I take a look at my enormous penis And my troubles start a-meltin' away (Ba-doo-bop-bop) I take a look at my enormous penis And the happy times are coming to stay I gotta sing and I dance when I glance in my pants
+</p>
       <!-- <p id='input_text'></p> -->
-      <div>
-          type here
-      </div>
-      <div class="input-group-prepend col-md">
+      <label for="in" class="col-md-2 col-form-label">Type Here: </label>
+      <div class="input-group-prepend col-md-8">
         <input type="text" id="in" class="form-control" placeholder="you better type fast!"/>
       </div>
-      <div class = "col-md">
+      <div class = "col-md-2">
         <div id="app">
         </div>
       </div>
