--- a/templates/typingPage.html
+++ b/templates/typingPage.html
@@ -16,8 +16,8 @@
       <div class = "row">
       <h1>TypeRacer</h1>
 
-      <p id = "correct_text" class = "alert alert-info">I take a look at my enormous penis And my troubles start a-meltin' away (Ba-doo-bop-bop) I take a look at my enormous penis And the happy times are coming to stay I gotta sing and I dance when I glance in my pants
-</p>
+      <p id = "correct_text" class = "alert alert-info">I threw a wish in the well. Don't ask me, I'll never tell. I looked to you as it fell. And now you're in my way. I trade my soul for a wish. Pennies and dimes for a kiss. I wasn't looking for this. But now you're in my way
+      </p>
       <!-- <p id='input_text'></p> -->
       <label for="in" class="col-md-2 col-form-label">Type Here: </label>
       <div class="input-group-prepend col-md-8">
