--- a/static/my_style.css
+++ b/static/my_style.css
@@ -82,3 +82,16 @@ body {
   border-color: #00509D !important;
   color : white !important;
 }
+
+/* .swal-button {
+  padding: 7px 19px;
+  border-radius: 2px;
+  background-color: #00509D !important;
+  font-size: 12px;
+  border: 1px solid #00509D !important;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+} */
+
+.swal-overlay {
+  background-color: rgba(0, 80, 157, 0.45);
+}
