--- a/static/my_style.css
+++ b/static/my_style.css
@@ -14,7 +14,7 @@ body {
   font-family: sans-serif;
   display: grid;
   height: 100vh;
-  background-color : #FFEFAD;
+  background-color : #FFF7D6;
   place-items: center;
 }
 
